--- a/app/views/static_pages/terms.html.erb
+++ b/app/views/static_pages/terms.html.erb
@@ -1,51 +1,47 @@
 <% provide(:title, '利用規約') %>
 
-<div class="container-fluid mt-5">
+<div class="container-fluid mt-4 text-container">
   <div class="row justify-content-center">
-    <div class="col-md-12">
+    <div class="col-md-13">
       <h4 class="text-center mb-4">利用規約</h4>
-      <p class="lead">このウェブサイト（以下、「本サイト」といいます）の利用規約を以下に定めます。本サイトを利用する全てのユーザーは、以下の利用規約に同意したものとみなされます。</p>
+        <p class="lead">このウェブサイト（以下、「本サイト」といいます）の利用規約を以下に定めます。本サイトを利用する全てのユーザーは、以下の利用規約に同意したものとみなされます。</p>
 
 
       <h5>第1条（適用）</h5>
-      <p>本規約は、ユーザーと本サイトの運営者との間の本サイトの利用に関わる一切の関係に適用されるものとします。</p>
+        <p>本規約は、ユーザーと本サイトの運営者との間の本サイトの利用に関わる一切の関係に適用されるものとします。</p>
 
       <h5>第2条（利用登録）</h5>
-      <p>登録希望者が本サイトの定める方法によって利用登録を申請し、本サイトがこれを承認することによって、利用登録が完了するものとします。</p>
+        <p>登録希望者が本サイトの定める方法によって利用登録を申請し、本サイトがこれを承認することによって、利用登録が完了するものとします。</p>
 
       <h5>第3条（ユーザーIDおよびパスワードの管理）</h5>
-      <p>ユーザーは、自己の責任において、ユーザーIDおよびパスワードを適切に管理するものとします。</p>
+        <p>ユーザーは、自己の責任において、ユーザーIDおよびパスワードを適切に管理するものとします。</p>
 
       <h5>第4条（禁止事項）</h5>
-      <p>ユーザーは、本サイトの利用にあたり、以下の行為をしてはならないものとします。</p>
-      <ul>
-        <li>法令または公序良俗に違反する行為</li>
-        <li>犯罪行為に関連する行為</li>
-        <li>本サイト、他のユーザー、または第三者の著作権、商標権、プライバシー権、名誉権等の権利を侵害する行為</li>
-        <li>その他、本サイトが不適切と判断する行為</li>
-      </ul>
+        <p>ユーザーは、本サイトの利用にあたり、以下の行為をしてはならないものとします。</p>
+          <p>･法令または公序良俗に違反する行為</p>
+          <p>･犯罪行為に関連する行為</p>
+          <p>･本サイト、他のユーザー、または第三者の著作権、商標権、プライバシー権、名誉権等の権利を侵害する行為</p>
+          <p>･その他、本サイトが不適切と判断する行為</p>
 
       <h5>第5条（本サービスの提供の停止等）</h5>
-      <p>本サイトは、ユーザーが以下のいずれかに該当する場合には、事前の通知なく本サービスの全部または一部を停止または中止することができるものとします。</p>
-      <ul>
-        <li>本規約のいずれかの条項に違反した場合</li>
-        <li>その他、本サイトが本サービスの提供が適切でないと判断した場合</li>
-      </ul>
+        <p>本サイトは、ユーザーが以下のいずれかに該当する場合には、事前の通知なく本サービスの全部または一部を停止または中止することができるものとします。</p>
+        <p>･本規約のいずれかの条項に違反した場合</p>
+        <p>･その他、本サイトが本サービスの提供が適切でないと判断した場合</p>
 
       <h5>第6条（免責事項）</h5>
-      <p>本サイトは、本サービスに関して、その内容についていかなる保証も行いません。また、何らかの理由で発生したユーザーまたは第三者に対する損害について、一切の責任を負いません。</p>
+        <p>本サイトは、本サービスに関して、その内容についていかなる保証も行いません。また、何らかの理由で発生したユーザーまたは第三者に対する損害について、一切の責任を負いません。</p>
 
       <h5>第7条（サービス内容の変更等）</h5>
-      <p>本サイトは、ユーザーに通知することなく、本サービスの内容を変更または本サービスの提供を中止することができるものとします。</p>
+        <p>本サイトは、ユーザーに通知することなく、本サービスの内容を変更または本サービスの提供を中止することができるものとします。</p>
 
       <h5>第8条（利用規約の変更）</h5>
-      <p>本サイトは、必要と判断した場合には、ユーザーに通知することなく、本利用規約を変更することができるものとします。</p>
+        <p>本サイトは、必要と判断した場合には、ユーザーに通知することなく、本利用規約を変更することができるものとします。</p>
 
       <h5>第9条（通知または連絡）</h5>
-      <p>ユーザーと本サイトとの間の通知または連絡は、本サイトの定める方法によって行うものとします。</p>
+        <p>ユーザーと本サイトとの間の通知または連絡は、本サイトの定める方法によって行うものとします。</p>
 
       <h5>第10条（準拠法・裁判管轄）</h5>
-      <p>本規約の解釈にあたっては、日本法を準拠法とします。本サービスに関して紛争が生じた場合には、本サイトの運営者の所在地を管轄する裁判所を専属的な管轄裁判所とします。</p>
+        <p>本規約の解釈にあたっては、日本法を準拠法とします。本サービスに関して紛争が生じた場合には、本サイトの運営者の所在地を管轄する裁判所を専属的な管轄裁判所とします。</p>
 
       <p>（以上）</p>
     </div>
