お気に入り登録時のフラッシュメッセージ表示

--- a/app/views/bookmarks/toggle.js.erb
+++ b/app/views/bookmarks/toggle.js.erb
@@ -1,7 +1,16 @@
 <% if @bookmark.present? %>
-  //お気に入りアイコンを塗りつぶし状態に変更
+  // お気に入りアイコンを塗りつぶし状態に変更
   $("#favorite-icon-<%= @drink.id %>").removeClass('bi-heart').addClass('bi-heart-fill');
+  // フラッシュメッセージを表示
+  $("#flash-messages").html('<div class="alert alert-success">お気に入りに登録しました。</div>');
 <% else %>
   // ブックマークが存在しない場合、お気に入りアイコンの塗りつぶしを解除
   $("#favorite-icon-<%= @drink.id %>").removeClass('bi-heart-fill').addClass('bi-heart');
+  // フラッシュメッセージを表示
+  $("#flash-messages").html('<div class="alert alert-warning">お気に入りを解除しました。</div>');
 <% end %>
+
+// 一定時間後にフラッシュメッセージをフェードアウトさせる
+setTimeout(function() {
+  $("#flash-messages .alert").fadeOut();
+}, 1000); // ここでは5000ミリ秒（5秒）後にフェード
