--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,6 +56,7 @@
 
       <main class="row">
         <div class="col-8 offset-2">
+          <div id="flash-messages"></div> <!-- フラッシュメッセージ表示用のコンテナ -->
           <%= yield %>
         </div>
       </main>
