--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,6 +2,55 @@ body  {
   background-color: #FAEBD7 !important;
 }
 
+/* モーダルコンテンツ全体のスタイル */
+.modal-content {
+  border-radius: 8px; /* 角の丸み */
+}
+
+/* モーダルヘッダーのスタイル */
+.modal-header {
+  border-bottom: 1px solid #444; /* ヘッダーの下線 */
+}
+
+.modal-title {
+  font-weight: bold; /* タイトルのフォントの太さ */
+}
+
+/* ボタンクローズのスタイル */
+.btn-close {
+  filter: invert(1); /* アイコンの色を白く */
+}
+
+/* モーダルボディのスタイル */
+.modal-body {
+  padding: 20px; /* 内側の余白 */
+}
+
+/* モーダルフッターのスタイル */
+.modal-footer {
+  border-top: 1px solid #444; /* フッターの上線 */
+  justify-content: center; /* ボタンを中央揃え */
+}
+
+/* モーダルのボタンスタイル */
+.modal-footer .btn-secondary {
+  background-color: #6c757d; /* ボタンの背景色 */
+  border: none; /* 枠線を消す */
+  border-radius: 5px; /* 角の丸み */
+}
+
+/* ホバー時のボタンスタイル */
+.modal-footer .btn-secondary:hover {
+  background-color: #5a6268; /* ホバー時の背景色 */
+}
+
+/* フォーカス・アクティブ時のボタンスタイル */
+.modal-footer .btn-secondary:focus,
+.modal-footer .btn-secondary:active {
+  background-color: #545b62; /* フォーカス・アクティブ時の背景色 */
+  box-shadow: none; /* ボックスシャドウを消す */
+}
+
 .btn-primary.speech-bubble-button {
   position: absolute;
   top: -320px; /* 親要素から上に50pxの位置 */
@@ -12,37 +61,11 @@ body  {
   color: #111111; /* テキストの色 */
   font-size: 16px;
   border: 1px solid #DCDCDC; /* 枠線を黒色に */
-  border-radius: 10px; /* ボタンの角を丸くする */
+  border-radius: 0px; /* ボタンの角を丸くする */
   transition: transform 0.3s; /* ホバー時の変化を滑らかに */
   text-align: center; /* テキストを中央揃え */
   white-space: nowrap; /* テキストを折り返さない */
   writing-mode: vertical-lr; /* テキストの書き方を縦書きに */
-}
-
-.btn-primary.speech-bubble-button::before {
-  content: '';
-  position: absolute;
-  top: 50%; /* ボタンの縦中央からの位置 */
-  left: -12px; /* ボタンの左側からの位置を少し外側に */
-  transform: translateY(-50%); /* Y軸方向の中央に合わせる */
-  width: 0;
-  height: 0;
-  border-top: 6px solid transparent; /* 上側の境界線（枠用） */
-  border-bottom: 6px solid transparent; /* 下側の境界線（枠用） */
-  border-right: 12px solid #DCDCDC; /* 右側（ボタン側）の境界線の色（枠用） */
-}
-
-.btn-primary.speech-bubble-button::after {
-  content: '';
-  position: absolute;
-  top: 50%; /* ボタンの縦中央からの位置 */
-  left: -10px; /* ボタンの左側からの位置を指定 */
-  transform: translateY(-50%); /* Y軸方向の中央に合わせる */
-  width: 0;
-  height: 0;
-  border-top: 5px solid transparent; /* 上側の境界線（本体） */
-  border-bottom: 5px solid transparent; /* 下側の境界線（本体） */
-  border-right: 10px solid #FFEFD5; /* 右側（ボタン側）の境界線の色（本体） */
 }
 
 .btn-primary.speech-bubble-button:hover {
