--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -6,24 +6,26 @@
 
 <!-- モーダルを開くためのボタン -->
 <button type="button" class="btn btn-primary speech-bubble-button" data-toggle="modal" data-target="#hamsterModal">
-  マスターの紹介はここ！
+  マスター紹介はここ
 </button>
 
 <!-- モーダル -->
 <div class="modal fade" id="hamsterModal" tabindex="-1" aria-labelledby="hamsterModalLabel" aria-hidden="true">
   <div class="modal-dialog">
-    <div class="modal-content">
+    <div class="modal-content" style="background-image: url(<%= asset_path 'modal.png' %>); background-size: cover; background-position: center;">
       <div class="modal-header">
-        <h5 class="modal-title" id="hamsterModalLabel">マスターの紹介</h5>
+        <h5 class="modal-title" id="hamsterModalLabel">マスターの紹介（豆知識）</h5>
         <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <!-- アプリの使い方についての説明 -->
         <p>なぜハムスターがバーテンダーをしてるのか？</p>
-        <p>自然界での最強の酒豪、それが意外にもあのハムスターです。
-        <br>人間サイズになると1日で95％のアルコールを1.5ℓ飲めるそう！
-        <br>水とウォッカを同時に与えるとウォッカを好んで飲むらしいです
-        <br>お酒においては最強なのだ！！※良い子はペットにやらないでね
+        <p>自然界での最強の酒豪、それが意外にもあの小さいハムスター。
+        <br>人間サイズになると1日で95％のアルコールを1.5ℓ飲めるそう！ちょっと計算してみました
+        <p>純アルコールで計算すると5％のビール500㎖で57本でした...</p>
+        <br>水とウォッカを同時に与えるとウォッカを好んで飲むほどのお酒好きらしいです
+        お酒においてはハムスターは最強なのだ！！
+        <br>※良い子はペットにやらないでね
         </p>
       </div>
       <div class="modal-footer">
