--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -48,7 +48,13 @@
         <%= f.submit "はじめる", class:'btn btn-primary mb-4' %>
       </div>
     </div>
-  <% end %>
+    <% end %>
+
+<div class="row mt-3">
+  <div class="col-6 offset-3 text-center">
+    <%= link_to 'マスターに相談する', consult_master_path, class: 'btn btn-secondary' %>
+  </div>
+</div>
 
 <div class="container mt-5">
   <div class="row justify-content-center text-center">
