--- a/app/views/masters/consult.html.erb
+++ b/app/views/masters/consult.html.erb
@@ -1,2 +1,19 @@
-<h1>マスターに相談する</h1>
-<p>ここに相談内容やフォームなど、必要な情報を表示します。</p>
+<h3>マスターに相談する</h3>
+
+<div class="container">
+  <div class="row"> <!-- この行を追加 -->
+    <% @cards.each do |card| %>
+      <div class="col-sm-6 mb-4">
+        <div class="card h-100" style="<%= 'background-image: url(' + asset_path(card[:image_file]) + ');' if card[:image_file].present? %> background-size: cover; color: white;">
+          <div class="card-body">
+            <h5 class="card-title"><%= card[:title] %></h5>
+            <p class="card-text"><%= card[:text] %></p>
+            <%= link_to masters_result_path(card[:search_params]), class: "btn btn-default btn-lg" do %>
+              <i class="glyphicon glyphicon-glass"></i> 選択
+            <% end %>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div> <!-- この行を追加 -->
+</div>
