--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,9 @@
         </li>
         <% if user_signed_in? %>
           <li class="nav-item">
+            <%= link_to 'ランキング', rankings_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
             <%= link_to 'お気に入り一覧', user_path(current_user), class: 'nav-link' %>
           </li>
           <li class="nav-item">
