--- a/app/views/cocktails/step3.html.erb
+++ b/app/views/cocktails/step3.html.erb
@@ -4,7 +4,7 @@
     <div class="btn-group-vertical" role="group" aria-label="Taste Group">
       <% taste_groups = [['1,2', '甘口'], ['3', '中口'], ['4,5', '辛口']] %>
       <% taste_groups.each do |value, label| %>
-        <label class="btn btn-outline-primary">
+        <label class="btn btn-outline-secondary rounded mb-2">
           <input type="radio" name="taste_group" value="<%= value %>" id="taste<%= value %>" class="hidden-radio"> <%= label %>
         </label>
       <% end %>
@@ -12,7 +12,7 @@
   </fieldset>
 
   <div class="d-flex justify-content-center">
-    <button type="submit" class="btn btn-primary mt-2">結果を表示</button>
+    <button type="submit" class="btn btn-outline-secondary rounded mt-2">結果を表示</button>
   </div>
 <% end %>
 
