モーダル調整

--- a/app/views/cocktails/step2.html.erb
+++ b/app/views/cocktails/step2.html.erb
@@ -3,7 +3,7 @@
   <input type="hidden" name="alcohol_from" value="<%= @alcohol_from %>">
   <input type="hidden" name="alcohol_to" value="<%= @alcohol_to %>">
   <fieldset class="mb-3">
-    <legend class="form-label">ベースを選択してね</legend>
+    <legend class="form-label">カクテルのベースを選択してね</legend>
     <div class="row">
       <% 
       bases = [
