--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -160,7 +160,8 @@ nav.pagination .disabled a, nav.pagination .disabled a:hover {
 
 /* モーダルコンテンツ全体のスタイル */
 .modal-content {
-  border-radius: 8px; /* 角の丸み */
+  border-radius: 20px; /* 角の丸み */
+  z-index: 1;
 }
 
 /* モーダルヘッダーのスタイル */
@@ -425,6 +426,26 @@ nav.pagination .disabled a, nav.pagination .disabled a:hover {
 
 .text-container ul {
   padding-left: 20px; /* リストのインデント */
+}
+
+.hero {
+  background-image: url('/img/alcole1.jpg');
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  position: relative;
+  z-index: 2;
+}
+
+.hero::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(58, 58, 58, 0.791);
+  z-index: -1;
 }
 
 /* スマホ用のスタイル */
