--- a/app/views/cocktails/step1.html.erb
+++ b/app/views/cocktails/step1.html.erb
@@ -1,6 +1,6 @@
 <%= form_with(url: step2_cocktails_path, method: "get", class: "form-group") do %>  <!-- フォームを開始。送信先はstep2_cocktails_pathで、メソッドはGET、classはform-group -->
   <fieldset class="mb-3">  <!-- フィールドセットを使用してフォームのセクションをグループ化 -->
-    <legend class="form-label">アルコール度数は？</legend>
+    <legend class="form-label">アルコール度数はどれぐらい？</legend>
     <div class="btn-group-vertical" role="group" aria-label="Alcohol content">
       <% [['0', 'ノンアルコール'], ['1', '1~15％前後'], ['18', '25%前後'], ['27', '35%前後']].each do |value, label| %>
         <label class="btn btn-outline-secondary rounded mb-2">
