--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,9 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark navbar-custom py-3 mb-5">
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark navbar-custom py-3">
       <div class="container">
-    <%= link_to image_tag('naninomu_top1.png', width:150), games_path, class: 'navbar-brand' %>
+    <%= link_to image_tag('naninomu_top1.png', width:200), games_path, class: 'navbar-brand' %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -48,13 +48,18 @@
     </div>
   </div>
 </nav>
-
+<%= yield :hero %>
 
 <div class="container text-center">
-  <header class="row mb-3">
-    <div class="col-12">
-      <%= image_tag 'naninomu.png', {width: 350} %>
-  </header>
+    <header class="row mb-2">
+      <div class="col-12">
+        <% if content_for?(:header_image) %>
+          <%= yield :header_image %>
+        <% else %>
+          <%= image_tag 'naninomu.png', {width:350} %>
+        <% end %>
+      </div>
+    </header>
 
   <main class="row">
     <div class="col-8 offset-2">
