--- a/app/views/masters/result.html.erb
+++ b/app/views/masters/result.html.erb
@@ -10,8 +10,8 @@
 
   <div class="row">
     <% @cocktails.each do |cocktail| %>
-      <div class="col-md-6">
-        <div class="card mb-4 shadow-sm">
+      <div class="col-md-6 mb-4">
+        <div class="card h-100 text-center card-custom " style="background: #FFF; color: #333;">
             <div class="card-body">
               <div class="d-flex justify-content-between align-items-center">
                 <h5 class="card-title"><%= cocktail["cocktail_name"] %></h5>
@@ -34,7 +34,7 @@
 
             <!-- Flexbox コンテナーを追加 -->
             <div class="d-flex justify-content-between">
-              <p class="card-text"><%= cocktail["base_name"] %></p>
+              <p class="card-text">Base.<%= cocktail["base_name"] %></p>
               <p class="card-text">アルコール度数: <%= cocktail["alcohol"] %>%</p>
             </div>
 
