--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,15 +73,13 @@
   <div class="footer-top">
     <div class="container">
       <div class="row">
-        <div class="col-md-4 d-flex align-items-center">
-          <h2 class="text-white mt-5 custom-margin">Naninomu</h2>
-        </div>
-<div class="container ms-4">
+
+<div class="container">
   <div class="row justify-content-center text-center">
-    <div class="col-12 col-md-auto mb-2">
+    <div class="col-12 col-md-auto mb-1">
       <a href="<%= contact_path %>" class="btn btn-link">お問い合わせ</a>
     </div>
-    <div class="col-12 col-md-auto mb-2">
+    <div class="col-12 col-md-auto mb-1">
       <a href="<%= terms_path %>" class="btn btn-link">利用規約</a>
     </div>
     <div class="col-12 col-md-auto">
