--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+    .autocomplete-custom-item {
+      padding: 2px 3px;
+      border-bottom: 1px solid #ddd;
+      display: flex;
+      align-items: center;
+    }
+
+    .autocomplete-custom-item:last-child {
+      border-bottom: none;
+    }
+
+    .autocomplete-custom-item .bi {
+      margin-right: 10px;
+    }
+    </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Naninomu</title>
     <meta name="viewport" content="width=device-width,initial-scale=1, shrink-to-fit=no">
@@ -10,8 +26,11 @@
     <%= stylesheet_link_tag 'application', 'data-turbo-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="//code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   </head>
 
   <body>
@@ -91,3 +110,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
+
+<script>
+$(document).ready(function() {
+  $(".search-field").autocomplete({
+    source: "/cocktails/autocomplete", // オートコンプリートのエンドポイント
+    minLength: 2, // オートコンプリートが動作する最小文字数を設定
+  }).autocomplete("instance")._renderItem = function(ul, item) {
+    return $("<li>")
+      .addClass("autocomplete-custom-item")
+      .append("<div><i class='bi bi-glass-martini'></i>" + item.label + "</div>")
+      .appendTo(ul);
+  };
+});
+</script>
