--- a/app/views/cocktails/rankings.html.erb
+++ b/app/views/cocktails/rankings.html.erb
@@ -1,6 +1,6 @@
 <h5>カクテルランキング</h5>
 <p>このサイトのお気に入り数でランキングつけてます！</p>
-<ul class="list-group">
+<ul class="list-group mb-5">
   <% @drinks.each_with_index do |drink, index| %>
     <li class="list-group-item d-flex justify-content-between align-items-center mb-1">
       <span class="font-weight-bold"><%= "#{index + 1}位 : #{drink.name}" %></span>
