--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -88,10 +88,10 @@
   </main>
 </div>
 
-<footer class="mt-5">
-  <div class="footer-top">
-    <div class="container">
-      <div class="row">
+
+<footer class="footer-top mt-auto">
+  <div class="container">
+    <div class="row">
 
 <div class="container">
   <div class="row justify-content-center text-center">
