--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,17 +1,16 @@
 <h3>お気に入り一覧</h3>
 <div class="cocktail-card">
-  <div class="cocktail-info">  <!-- カクテル情報を表示するためのコンテナ -->
-    <% @bookmarks.each do |bookmark| %>  <!-- ページネーションが適用されたブックマークを繰り返し処理して表示 -->
-        <div class="cocktail-info d-flex align-items-center justify-content-between mb-3">
+  <div class="cocktail-info">
+    <% @bookmarks.each do |bookmark| %>
+      <div class="d-flex align-items-center justify-content-between mb-3">
         <div>
-            <h6><%= bookmark.drink.name %></h6>
-            <p><%= bookmark.drink.description %></p>
+          <h6><%= bookmark.drink.name %></h6>
+          <p><%= bookmark.drink.description %></p>
         </div>
-        <!-- お気に入りから削除するためのリンク。クリックするとお気に入りから削除される -->
         <%= link_to drink_bookmarks_path(bookmark.drink), method: :delete, class: 'custom-icon-link' do %>
-            <i class="bi bi-heart-fill"></i>
+          <i class="bi bi-heart-fill"></i>
         <% end %>
-        </div>
+      </div>
     <% end %>
     <%= paginate @bookmarks %>
   </div>
