--- a/app/views/cocktails/rankings.html.erb
+++ b/app/views/cocktails/rankings.html.erb
@@ -1,5 +1,10 @@
 <h5>カクテルランキング</h5>
 <p>このサイトのお気に入り数でランキングつけてます！</p>
+
+<% if !current_user %>
+  <p><strong>カクテル結果をお気に入りに登録するには、<%= link_to 'ログイン', new_user_session_path %>してください。</strong></p>
+<% end %>
+
 <ul class="list-group mb-5">
   <% @drinks.each_with_index do |drink, index| %>
     <li class="list-group-item d-flex justify-content-between align-items-center mb-1">
@@ -18,7 +23,6 @@
           <% end %>
         </div>
       <% else %>
-        <span>ログインしてお気に入りを保存</span>
       <% end %>
       <span class="badge bg-primary rounded-pill"></span>
     </li>
