--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -287,6 +287,7 @@ nav.pagination .disabled a, nav.pagination .disabled a:hover {
   font-size: 16px;
   text-align: center;
   display: inline-block;
+  border-radius: 30px;
   margin: 10px 0;
 }
 
