--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,15 +50,18 @@
         </li>
         <% if user_signed_in? %>
           <li class="nav-item">
-            <%= link_to 'ランキング', rankings_path, class: 'nav-link' %>
+            <%= link_to 'お気に入り一覧', user_path(current_user), class: 'nav-link' %>
           </li>
           <li class="nav-item">
-            <%= link_to 'お気に入り一覧', user_path(current_user), class: 'nav-link' %>
+            <%= link_to 'ランキング', rankings_path, class: 'nav-link' %>
           </li>
           <li class="nav-item">
             <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link' %>
           </li>
         <% else %>
+          <li class="nav-item">
+            <%= link_to 'ランキング', rankings_path, class: 'nav-link' %>
+          </li>
           <li class="nav-item">
             <%= link_to 'ログイン', new_user_session_path, class: 'nav-link' %>
           </li>
