--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" href="<%= asset_path 'favicons/favicon.ico' %>" sizes="16x16" type="image/x-icon">
+    <link rel="icon" href="<%= asset_path 'favicons/icon-32x32.png' %>" sizes="32x32" type="image/png">
+    <link rel="icon" href="<%= asset_path 'favicons/icon-48x48.png' %>" sizes="48x48" type="image/png">
+    <link rel="icon" href="<%= asset_path 'favicons/icon-96x96.png' %>" sizes="96x96" type="image/png">
+    <link rel="icon" href="<%= asset_path 'favicons/icon-128x128.png' %>" sizes="128x128" type="image/png">
+    <link rel="icon" href="<%= asset_path 'favicons/icon-152x152.png' %>" sizes="152x152" type="image/png">
+    <link rel="icon" href="<%= asset_path 'favicons/icon-192x192.png' %>" sizes="192x192" type="image/png">
+    <link rel="icon" href="<%= asset_path 'favicons/icon-256x256.png' %>" sizes="256x256" type="image/png">
+    <link rel="icon" href="<%= asset_path 'favicons/icon-384x384.png' %>" sizes="384x384" type="image/png">
+    <link rel="icon" href="<%= asset_path 'favicons/icon-512x512.png' %>" sizes="512x512" type="image/png">
+
     <style>
     .autocomplete-custom-item {
       padding: 2px 3px;
