--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -32,10 +32,9 @@
         <!-- アプリの使い方についての説明 -->
         <p>なぜハムスターがバーテンダーをしてるのか？</p>
         <p>自然界での最強の酒豪、それが意外にもあの小さいハムスター。
-        <br>人間サイズになると1日で95％のアルコールを1.5ℓ飲めるそう！ちょっと計算してみました
-        <p>純アルコールで計算すると5％のビール500㎖で57本でした...</p>
+        <br>人間サイズになると1日で95％のアルコールを1.5ℓ飲めるそう！
         <br>水とウォッカを同時に与えるとウォッカを好んで飲むほどのお酒好きらしいです
-        お酒においてはハムスターは最強なのだ！！
+        お酒においてはハムスターは最強ですね！
         <br>※良い子はペットにやらないでね
         </p>
       </div>
