モーダル修正

--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -23,7 +23,7 @@
 <!-- モーダル -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
-    <div class="modal-content" style="background-image: url('<%= asset_path('modal.png') %>'); background-size: cover; background-position: center;">>
+    <div class="modal-content" style="background-image: url('<%= asset_path('modal.png') %>'); background-size: cover; background-position: center;">
       <div class="modal-header">
         <h5 class="modal-title text-white" id="exampleModalLabel">マスターの紹介（豆知識）</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
