user_spec新規作成user.rb変更

--- a/app/views/cocktails/step2.html.erb
+++ b/app/views/cocktails/step2.html.erb
@@ -27,7 +27,7 @@
     </div>
   </fieldset>
 
-  <button type="submit" class="btn btn-outline-secondary rounded mt-2">次へ</button>
+  <button type="submit" class="btn btn-outline-secondary rounded mb-5 mt-3">次へ</button>
 <% end %>
 
 <script>
