--- a/app/views/cocktails/step3.html.erb
+++ b/app/views/cocktails/step3.html.erb
@@ -12,7 +12,7 @@
   </fieldset>
 
   <div class="d-flex justify-content-center">
-    <button type="submit" class="btn btn-outline-secondary rounded mt-2">結果を表示</button>
+    <button type="submit" class="btn btn-outline-secondary rounded mb-5 mt-3">結果を表示</button>
   </div>
 <% end %>
 
