モバイル用の画像

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -468,6 +468,10 @@ nav.pagination .disabled a, nav.pagination .disabled a:hover {
 
   .hero {
     background-position: left center; /* モバイルでは画像の上部を中心に表示 */
+    background-image: url('/img/alcole2.jpg'); /* モバイル用の画像に変更 */
+    background-position: top center; /* モバイルデバイスでの表示位置を調整 */
+    background-size: cover; /* モバイルデバイスでのサイズ調整 */
+    background-attachment: scroll; /* モバイルでは背景画像の固定を解除 */
   }
 
   .text-container p, .text-container h4, .text-container h5 {
