--- a/app/views/cocktails/rankings.html.erb
+++ b/app/views/cocktails/rankings.html.erb
@@ -1,30 +1,11 @@
 <h5>カクテル人気ランキング</h5>
 <p>このサイトのお気に入り数でランキングつけてます！</p>
 
-<% if !current_user %>
-  <p><strong>カクテル結果をお気に入りに登録するには、<%= link_to 'ログイン', new_user_session_path %>してください。</strong></p>
-<% end %>
-
 <ul class="list-group mb-5">
   <% @drinks.each_with_index do |drink, index| %>
-    <li class="list-group-item d-flex justify-content-between align-items-center mb-1">
-      <span class="font-weight-bold"><%= "#{index + 1}位 : #{drink.name}" %></span>
-      <% if user_signed_in? %>
-        <% bookmark = current_user.bookmarks.find_by(drink_id: drink.id) %>
-        <div id="bookmark_<%= drink.id %>">
-          <% if bookmark.present? %>
-            <%= link_to drink_bookmarks_path(drink.id), method: :delete, remote: true, class: 'favorite-icon-link text-danger' do %>
-              <i class="bi bi-heart-fill"></i> <!-- 既にブックマークされている場合 -->
-            <% end %>
-          <% else %>
-            <%= link_to drink_bookmarks_path(drink.id), method: :post, remote: true, class: 'favorite-icon-link text-secondary' do %>
-              <i class="bi bi-heart"></i> <!-- ブックマークされていない場合 -->
-            <% end %>
-          <% end %>
-        </div>
-      <% else %>
-      <% end %>
-      <span class="badge bg-primary rounded-pill"></span>
+    <li class="list-group-item d-flex justify-content-between align-items-center mb-2">
+      <%= link_to "#{index + 1}位 : #{drink.name}", cocktails_search_path(word: drink.name), class: 'font-weight-bold' %>
+      <span class="badge bg-primary rounded-pill"><%= drink.bookmarks.count %></span>
     </li>
   <% end %>
 </ul>
