--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -277,27 +277,6 @@ nav.pagination .disabled a, nav.pagination .disabled a:hover {
   color: #fff;
 }
 
-#google-login-btn {
-  background-color: #4285F4; /* Googleのブルー */
-  color: white;
-  padding: 10px 15px;
-  border: none;
-  border-radius: 2px;
-  font-size: 16px;
-  text-align: center;
-  display: inline-block;
-  border-radius: 30px;
-  margin: 10px 0;
-}
-
-#google-login-btn i {
-  margin-right: 8px; /* アイコンとテキストの間隔 */
-}
-
-#google-login-btn:hover {
-  background-color: #357ae8; /* ホバー時の色 */
-}
-
 .bi-heart {
   color: grey; /* 未選択時の色 */
 }
@@ -489,6 +468,36 @@ nav.pagination .disabled a, nav.pagination .disabled a:hover {
   background: url('cocktail_icon.png') no-repeat center center;
   width: 30px; /* アイコンのサイズに合わせて調整 */
   height: 30px; /* アイコンのサイズに合わせて調整 */
+}
+
+.omniauth-btn {
+  display: inline-block;
+  margin: 5px;
+  padding: 10px 15px;
+  color: white;
+  text-align: center;
+  border: none;
+  cursor: pointer;
+}
+
+.google-btn {
+  background-color: #3975dd;
+}
+
+.google-btn:hover {
+  background-color: #2159c2;
+}
+
+.line-btn {
+  background-color: #00c300;
+}
+
+.line-btn:hover {
+  background-color: #009900;
+}
+
+.omniauth-btn i {
+  margin-right: 8px;
 }
 
 /* スマホ用のスタイル */
