--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,31 +1,15 @@
-<%- if controller_name != 'sessions' %>
-  <%= link_to "ログイン", new_session_path(resource_name) %><br />
-<% end %>
-
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "アカウント登録", new_registration_path(resource_name) %><br />
-<% end %>
-
-<%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "パスワードを忘れた方", new_password_path(resource_name) %><br />
-<% end %>
-
-<%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <%= link_to "アカウントがロックされている場合", new_confirmation_path(resource_name) %><br />
-<% end %>
-
-<%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-  <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %><br />
-<% end %>
-
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
     <% if provider == :google_oauth2 %>
-      <%= button_to omniauth_authorize_path(resource_name, :google_oauth2), id: "google-login-btn", method: :post, data: { turbo: false } do %>
-        <i class="fab fa-google"></i> Googleアカウントでログイン
+      <%= button_to omniauth_authorize_path(resource_name, :google_oauth2), id: "google-login-btn", method: :post, class: "omniauth-btn google-btn", data: { turbo: false } do %>
+        <i class="fab fa-google"></i> Googleでログイン
+      <% end %>
+    <% elsif provider == :line %>
+      <%= button_to omniauth_authorize_path(resource_name, provider), method: :post, class: "omniauth-btn line-btn", data: { turbo: false } do %>
+        <i class="fab fa-line"></i> LINEでログイン
       <% end %>
     <% else %>
-      <%= button_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), data: { turbo: false } %><br />
+      <%= button_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), method: :post, class: "omniauth-btn", data: { turbo: false } %>
     <% end %>
   <% end %>
 <% end %>
